# midye

./: .gitignore  .sosrc  .swo  .swp  README.md  default.nix  dev.sh  hie.yaml  midye.cabal  tmux.sh
nix/: sources.json
src/: Main.hs  Prelude.hs
src/Data/: Color.hs
src/Data/Attoparsec/ByteString/: Extra.hs
src/Midye/: Main.hs  Process.hs  Render.hs  UI.hs
src/Midye/ANSI/: Parser.hs  Printer.hs  Render.hs  Types.hs  Widget.hs
src/Streaming/: Attoparsec.hs  Text.hs
test/Tests/: Util.hs
test/Tests/Midye/: ANSI.hs
test/Tests/Midye/ANSI/: Parser.hs  Render.hs  Widget.hs
test/Tests/Streaming/: Attoparsec.hs  Text.hs
test/args/fast/: TestArgs.hs
test/args/slow/: TestArgs.hs
test/data/: asciiquarium.ansi  asciiquarium.ansi.out  hexyl.ansi  hexyl.ansi.out  ls-simple.ansi  ls-simple.ansi.out  vi.ansi  vi.ansi.out
