cabal-version:       2.4

name:                midye
synopsis:            A terminal emulator
version:             0.0.1.0
homepage:            https://github.com/utdemir/midye
license:             BSD-3-Clause
author:              Utku Demir
maintainer:          Utku Demir
copyright:           Utku Demir
category:            System
build-type:          Simple

common common-options
  ghc-options:        -threaded
                      -Wall -Wpartial-fields -Wincomplete-record-updates -Widentities
                      -fno-show-valid-hole-fits
  default-language:   Haskell2010
  mixins:             base hiding (Prelude)
  default-extensions: LambdaCase
                      OverloadedStrings
                      TupleSections
                      TypeApplications
                      GeneralizedNewtypeDeriving
                      DeriveGeneric
                      DeriveFunctor
                      DerivingStrategies
                      BlockArguments
                      DeriveAnyClass
                      FlexibleInstances
                      DeriveLift
                      MultiWayIf
                      StandaloneDeriving
                      DataKinds
                      KindSignatures
                      NamedFieldPuns
                      RankNTypes
                      DuplicateRecordFields
                      PackageImports
                      ImportQualifiedPost
                      ScopedTypeVariables
                      NumericUnderscores
                      NamedFieldPuns
                      OverloadedLabels
                      MultiParamTypeClasses
                      TypeFamilies
  other-modules:      Midye.ANSI.Parser
                      Midye.ANSI.Printer
                      Midye.ANSI.Render
                      Midye.ANSI.Types
                      Midye.ANSI.Widget
                      Data.Color
                      Streaming.Attoparsec
                      Data.Attoparsec.ByteString.Extra
                      Midye.UI
                      Streaming.Text
                      Midye.Process
                      Midye.Main
                      Prelude
  build-depends:      base >=4.11 && < 5
                    , relude
                    , async
                    , attoparsec
                    , bytestring
                    , filepath
                    , streaming
                    , streaming-bytestring
                    , streaming-concurrency
                    , resourcet
                    , text
                    , inline-c
                    , unix
                    , process
                    , vector
                    , containers
                    , hint
                    , optics >= 0.4
                    , terminal-size
                    , clock
                    , human-readable-duration

executable midye
  import:             common-options
  main-is:            Main.hs
  hs-source-dirs:     src
  ghc-options:        -threaded -O2
  build-depends:      base

flag fast-tests
  description: Reduce the amount of property tests. Useful for faster feedback.
  default:     False
  manual:      True

test-suite midye-tests
  import:             common-options
  ghc-options:        -Wno-unused-packages -threaded
                      -rtsopts -with-rtsopts=-N
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test/ src/
  if flag(fast-tests) {
    hs-source-dirs: test/args/fast/
  } else {
    hs-source-dirs: test/args/slow/
  }
  main-is:            Driver.hs
  other-modules:      Tests.Midye.ANSI.Parser
                    , Tests.Midye.ANSI
                    , Tests.Midye.ANSI.Render
                    , Tests.Midye.ANSI.Widget
                    , Tests.Streaming.Attoparsec
                    , Tests.Streaming.Text
                    , Tests.Util
                    , TestArgs
  build-depends:      hedgehog
                    , tasty
                    , tasty-hedgehog
                    , tasty-golden
                    , tasty-hunit
                    , tasty-discover
                    , temporary
                    , HUnit
                    , base64-bytestring
                    , string-interpolate

